# type_and_data_structs

lab_1/: main.cpp  std_alg.txt
lab_1/src/: CMakeLists.txt  Vinograd_alg.txt  plot.gnu
lab_2/: main.cpp
lab_3/: algoritms.cpp  algoritms.h  helpers.cpp  helpers.h  main.cpp
lab_3/graphics/: damerau_alg.txt  lev_std_alg.txt  plot.gnu  rec_cache_lev_alg.txt  rec_lev_alg.txt
lab_4/: helpers.cpp  helpers.h  main.cpp  matrix.cpp  matrix.h  matrix_a  matrix_b  matrix_mul_krm.cpp  matrix_rm_1  matrix_rm_2  matrix_sum_krm.cpp  matrix_sum_krm.h  mul_1  mul_2
lab_5/: calculate_opz.cpp  calculate_opz.h  funcs_table.cpp  funcs_table.h  infix_to_postfix.cpp  infix_to_postfix.h  main.cpp  queue.h  table
lab_7/: int32.h  main.cpp
lab_8/: main.cpp
lab_9/: avl.h  main.cpp
rk_3/: bfs.h  dfs.h  main.cpp  node.h  queue.h  stack.h
